# glibc-tools

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
0.0~git3.23fd2b9-0ubuntu1/: glibc-tools_0.0~git3.23fd2b9-0ubuntu1.dsc
debian/: changelog  control  copyright  manpages  rules
faulty-example/: faulty-example.cpp
libSegFault/: _itoa.c  _itoa.cpp  _itoa.h  catchsegv.sh  common.h  config.cpp  config.hpp  intprops.h  segfault.c  segfault.cpp  signal-safe-trace.cpp  signal-safe-trace.hpp
libSegFault/aarch64/: sigcontextinfo.h
libSegFault/alpha/: register-dump.h  sigcontextinfo.h
libSegFault/arc/: sigcontextinfo.h
libSegFault/arm/: register-dump.h  sigcontextinfo.h
libSegFault/csky/: register-dump.h  sigcontextinfo.h
libSegFault/hppa/: sigcontextinfo.h
libSegFault/i386/: register-dump.h  sigcontextinfo.h
libSegFault/ia64/: register-dump.h  sigcontextinfo.h
libSegFault/m68k/: register-dump.h  sigcontextinfo.h
libSegFault/microblaze/: sigcontextinfo.h
libSegFault/mips/: register-dump.h  sigcontextinfo.h
libSegFault/nios2/: sigcontextinfo.h
libSegFault/or1k/: sigcontextinfo.h
libSegFault/powerpc/: sigcontextinfo.h
libSegFault/powerpc/powerpc32/: register-dump.h
libSegFault/powerpc/powerpc64/: register-dump.h
libSegFault/riscv/: register-dump.h  sigcontextinfo.h
libSegFault/s390/: sigcontextinfo.h
libSegFault/s390/s390-32/: register-dump.h
libSegFault/s390/s390-64/: register-dump.h
libSegFault/sh/: register-dump.h  sigcontextinfo.h
libSegFault/x86_64/: register-dump.h  sigcontextinfo.h
tracer/: main.cpp
(+4 files in other folders)
